--- a/.env
+++ b/.env
@@ -28,7 +28,8 @@ APP_SECRET=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 #DATABASE_URL="mysql://root:@127.0.0.1:3306/restaurante_db?serverVersion=8.0"
-DATABASE_URL="mysql://root:root@db:3306/restaurante_db?serverVersion=8.0"
+#DATABASE_URL="mysql://root:root@db:3306/restaurante_db?serverVersion=8.0"
+DATABASE_URL=postgresql://restaurante_api_database_user:jk1wyf0Ylgj5fljkdSvmK0FJmP8Yo8px@dpg-d259tpbipnbc73dofn8g-a.oregon-postgres.render.com/restaurante_api_database
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
